--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     </repositories>
 
     <dependencies>
+        <!-- Kafka -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
@@ -40,17 +41,28 @@
             <version>5.2.0</version>
         </dependency>
 
+        <!-- Record -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Main -->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.26</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
