--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
             <version>3.1.0-m1</version>
         </dependency>
 
+        <!-- HBase -->
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+
         <!-- Record -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -66,7 +74,7 @@
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.26</version>
             <scope>test</scope>
         </dependency>
